kubernetes/apps/immich/immich-ml.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
  labels:
    app: immich-ml
spec:
  selector:
    matchLabels:
      app: immich-ml
  replicas: 1
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      nodeSelector:
        immich: allowed
      volumes:
      - name: immich-uploads
        nfs:
          path: /mnt/ssd/k8s/immich/uploads
          server: 10.10.3.2
      - name: immich-ml-cache
        nfs:
          path: /mnt/ssd/k8s/immich/model-cache
          server: 10.10.3.2

      restartPolicy: Always
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      containers:
      - name: immich-ml
        image: ghcr.io/immich-app/immich-machine-learning:v1.120.2
        resources:
          requests:
            cpu: 100m
            memory: 100M
          limits:
            memory: 4G

        ports:
        - containerPort: 3003
          name: immich-ml

        volumeMounts:
        - mountPath: /usr/src/app/upload
          name: immich-uploads
        - mountPath: /cache
          name: immich-ml-cache
---

apiVersion: v1
kind: Service
metadata:
  name: immich-ml
  labels:
    app: immich-ml
spec:
  type: ClusterIP
  ports:
  - name: immich-ml
    port: 3003
    targetPort: 3003
  selector:
    app: immich-ml
