kubernetes/apps/immich/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    # proxy-body-size is set to 0 to remove the body limit on file uploads
    nginx.ingress.kubernetes.io/proxy-body-size: "0"

spec:
  ingressClassName: nginx
  rules:
  - host: immich.greenappleton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              name: immich-server
  tls:
  - hosts:
    - immich.greenappleton.com
    secretName: immich.greenappleton.com
